Reviewed by Oliver.

Fixes: http://bugs.webkit.org/show_bug.cgi?id=17568 (SVGForeignObjectElement can't react to width/height SVG DOM changes)

As the bug title says, fix all dynamic update problems that occour with SVGForeignObjectElement.

Tests: svg/dynamic-updates/SVGForeignObjectElement-dom-height-attr.html
	   svg/dynamic-updates/SVGForeignObjectElement-dom-width-attr.html
	   svg/dynamic-updates/SVGForeignObjectElement-dom-x-attr.html
	   svg/dynamic-updates/SVGForeignObjectElement-dom-y-attr.html
	   svg/dynamic-updates/SVGForeignObjectElement-svgdom-height-prop.html
	   svg/dynamic-updates/SVGForeignObjectElement-svgdom-width-prop.html
	   svg/dynamic-updates/SVGForeignObjectElement-svgdom-x-prop.html
	   svg/dynamic-updates/SVGForeignObjectElement-svgdom-y-prop.html


Canonical link: https://commits.webkit.org/24388@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30695 268f45cc-cd09-0410-ab3c-d52691b4dbfc