WebCore/svg/SVGForeignObjectElement.h
@@ -23,30 +23,27 @@
 #define SVGForeignObjectElement_h
 
 #if ENABLE(SVG) && ENABLE(SVG_FOREIGN_OBJECT)
-
 #include "SVGTests.h"
 #include "SVGLangSpace.h"
 #include "SVGURIReference.h"
 #include "SVGStyledTransformableElement.h"
 #include "SVGExternalResourcesRequired.h"
 
-namespace WebCore
-{
+namespace WebCore {
     class SVGLength;
-    class SVGDocument;
 
     class SVGForeignObjectElement : public SVGStyledTransformableElement,
-                                public SVGTests,
-                                public SVGLangSpace,
-                                public SVGExternalResourcesRequired,
-                                public SVGURIReference
-    {
+                                    public SVGTests,
+                                    public SVGLangSpace,
+                                    public SVGExternalResourcesRequired,
+                                    public SVGURIReference {
     public:
         SVGForeignObjectElement(const QualifiedName&, Document*);
         virtual ~SVGForeignObjectElement();
-        
+
         virtual bool isValid() const { return SVGTests::isValid(); }
         virtual void parseMappedAttribute(MappedAttribute*);
+        virtual void svgAttributeChanged(const QualifiedName&);
 
         bool childShouldCreateRenderer(Node*) const;
         virtual RenderObject* createRenderer(RenderArena* arena, RenderStyle* style);
@@ -68,5 +65,3 @@ namespace WebCore
 
 #endif // ENABLE(SVG) && ENABLE(SVG_FOREIGN_OBJECT)
 #endif
-
-// vim:ts=4:noet
