LayoutTests/svg/dynamic-updates/resources/SVGTestCase.js
@@ -1,5 +1,6 @@
 var svgNS = "http://www.w3.org/2000/svg";
 var xlinkNS = "http://www.w3.org/1999/xlink";
+var xhtmlNS = "http://www.w3.org/1999/xhtml";
 
 var rootSVGElement;
 
